fix: project nightStudty